--- a/video-transcriber-azure/VideoTransciber.Web/appsettings.json
+++ b/video-transcriber-azure/VideoTransciber.Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Azure": {
+    "BlobConnectionString": "Your_Azure_Storage_Connection_String",
+    "SpeechKey": "Your_Speech_Key",
+    "Region": "Your_Region"
+  }
 }
