--- a/excel/rag/appsettings.json
+++ b/excel/rag/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AzureOpenAI": {
-    "Endpoint": "https://your-resource-name.openai.azure.com/",
-    "ApiKey": "your-api-key-here",
+    "Endpoint": "https://test-azure-open-ai-fsdfsdf.openai.azure.com/",
+    "ApiKey": "NAN",
     "DeploymentName": "gpt-4",
-    "ApiVersion": "2024-06-01"
+    "ApiVersion": "2024-04-09"
   },
   "AzureSearch": {
-    "ServiceName": "your-search-service-name",
-    "AdminKey": "your-admin-key-here",
+    "ServiceName": "test-azure-search-ai-kdfjdjfb",
+    "AdminKey": "NAN",
     "IndexPrefix": "excel-rag"
   },
   "Logging": {
